UX Improvements guided by Danilo Pinheiro, also updated the address

--- a/palestra-desenvolvimento-agil.html
+++ b/palestra-desenvolvimento-agil.html
@@ -80,70 +80,69 @@
 	</div>
 	<div class="stripe landing-message">
 		<div class="container">
-        <h1>Uma palestra que vai mudar sua visão sobre desenvolvimento web:<br />
-        adapte-se continuamente, elimine desperdícios e faça entregas contínuas.</h1>
-        <h3>com Scrum, XP, Kanban e Lean</h3>
-        <br>
-        <p>uma parceria<br><img src="images/digitalks.jpg" alt="Digitalks" width="210px" /></p>
+			<div class="row">
+				<div class="span12">
+					<h2>24 de Maio, das 19h as 23h - <strong>Gratuito</strong></h2>
+					<br>
+					<h1>Palestra sobre Desenvolvimento Ágil</h1>
+					<br>
+					<h2>Rua Luís Coelho, 340 - cj. 92 - Próximo ao metrô Consolação</h2>
+				</div>
+			</div>
+
+			<hr />
+
+			<div class="row">
+				<div class="span12">
+					<a href="#contato" class="btn btn-info btn-large">
+						<strong>INSCRIÇÕES LIMITADAS</strong><br />clique aqui para garantir sua vaga</a>
+				</div>
+			</div>
+
         </div>
 	</div>
 	<div class="stripe stripe-color">
 		<div class="container">
 			<div id="download-now" class="row">
-				<div class="span6">
-					<img src="images/agile.png" alt="">
-				</div>
-				<div class="span6">					
-					<h3>
-						<i class="icon-calendar"></i> 24 de Maio | 19h30<br />
-						<i class="icon-home"></i> Rua Coelho Lisboa, 340 - Nono andar - Consolação<br />
-						<i class="icon-money"></i> <strong>Evento Gratuito</strong>
-					</h3>
-					<p></p>
-					<ul class="unstyled">
-						<li><strong>Pra quem? </strong>Empreendedores, investidores, diretores, gerentes, líderes técnicos, desenvolvedores e profissionais de negócios digitais em geral (startup, e-commerce, agência);</li>
-						<li><strong>Motivação? </strong>Introduzir novos empreendedores e pessoas que já trabalham com produtos digitais ao desenvolvimento ágil para que elas possam desenvolver produtos melhores mais rapidamente e com maior qualidade;</li>
-						<li><strong>Capacidade do evento </strong>50 pessoas;</li>
-						<li><strong>Quanto custa? </strong>Só sua presença</li>
-					</ul>
-					<hr />
-					<p></p>
-					<a href="#contato" class="btn btn-warning btn-large">INSCRIÇÕES LIMITADAS<br />clique aqui para garantir sua vaga</a>
+				<div class="span12">					
+					<h2>"Uma palestra que vai mudar sua visão sobre desenvolvimento web:<br />
+        			adapte-se continuamente, elimine desperdícios e faça entregas contínuas."</h2>
+        			<h3>com Scrum, XP, Kanban e Lean</h3>
 				</div>
 			</div>
 		</div>
 	</div>
 	
 	<div class="stripe" id="porque-agil">
-		<div class="container">
+		<div class="container why-agile">
 			<div class="page-header">
-				<h1><i class="icon-question-sign"></i> Por que ser ágil? <small></small></h1>
+				<h1>Por que ser ágil? <small></small></h1>
 			</div>
 			<div class="row">
 				<div class="span4">
-					<h2><i class="icon-dashboard"></i> Faça entregas rápidas e contínuas</h2>
+					<h3><i class="icon-dashboard"></i> Faça entregas rápidas e contínuas</h3>
 				</div>
 				<div class="span4">
-					<h2><i class="icon-reorder"></i> Gerencie prioridades sem afetar a agilidade do negócio</h2>
+					<h3><i class="icon-bar-chart"></i> Consiga mensurar e escalar a produção da sua equipe</h3>
 				</div>
 				<div class="span4">
-					<h2><i class="icon-bar-chart"></i> Consiga mensurar e escalar a produção da sua equipe</h2>
+					<h3><i class="icon-reorder"></i> Gerencie prioridades sem afetar a agilidade do negócio</h3>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="stripe">
-		<div class="container">
+		<div class="container why-agile">
 			<div class="row">
 				<div class="span4">
-					<h2><i class="icon-group"></i> Possua um time auto-gerenciável</h2>
+					<h3><i class="icon-group"></i> Times auto-gerenciáveis</h3>
 				</div>
 				<div class="span4">
 						
-					<h2><i class="icon-heart"></i> Maior engajamento e satisfação dos seus desenvolvedores de software</h2>
+					<h3><i class="icon-heart"></i> Maior engajamento e satisfação dos seus desenvolvedores de software</h3>
 				</div>
 				<div class="span4">
-					<h2><i class="icon-exchange"></i> Alinhamento entre TI e outras áreas</h2>
+					<h3><i class="icon-exchange"></i> Alinhamento entre TI e outras áreas</h3>
 				</div>
 			</div>
 		</div>
@@ -153,23 +152,21 @@
 	<div class="stripe stripe-color" id="about">
 		<div class="container">
 			<div class="row">
-				<div class="span12">
-					<h2><i class="icon-quote-left"></i> Um pouco sobre mim</h2>
-				</div>
-			</div>
-			
-			<div class="row">
-				<div class="span3">
+				<div class="span2">
+					<p>
+						<br>
+					</p>
 					<div class="thumbnail">
 						<img src="images/romulo_developer.jpg" alt="rômulo_developer">
 					</div>
 				</div>
-				<div class="span7">
+				<div class="span10">
+					<h2><i class="icon-quote-left"></i> Um pouco sobre mim</h2>
 					<p>Comecei minha carreira ainda adolescente quando brincava de desmontar e montar computadores para descobrir como eles funcionavam. Alguns anos depois, após abrir um negócio próprio e obter alguma experiência percebi que a dificuldade não está está em construir um bom site/software. A dificuldade está em construir um produto realmente necessário, no menor tempo e maior qualidade possível, e ainda continuar desenvolvendo esse produto conforme o mercado e o feedback dos clientes.</p>
 					<p>Tive a sorte de encontrar o que realmente gosto de fazer ainda cedo e hoje, com 23 anos, após ter sido técnico de informática, faz-tudo, empreendedor e programador hoje trabalho como Product Owner na <a href="http://www.kanui.com.br/" alt="Kanui" target="_blank">Kanui</a> onde faço o trabalho que amo: desenvolver um produto digital através de frameworks ágeis como o Scrum e o Lean.</p>
 					<p></p>
 					<blockquote>
-						<p>Certificado pela <a href="http://www.scrumalliance.org/profiles/232451-rmulo-gonalves-gomes" title="Product Owner - Rômulo Gomes">Scrum Alliance</a> como Product Owner. Mais informações sobre meu profissional você encontra no <a href="http://www.linkedin.com/profile/view?id=92332854" title="Rômulo Gomes - Product Owner" target="_blank">LinkedIn</a></p>
+						<p>Certificado pela <a href="http://www.scrumalliance.org/profiles/232451-rmulo-gonalves-gomes" title="Product Owner - Rômulo Gomes">Scrum Alliance</a> como Product Owner. Mais informações sobre meu profissional você encontra no meu <a href="http://www.linkedin.com/profile/view?id=92332854" title="Rômulo Gomes - Product Owner" target="_blank">LinkedIn</a></p>
 					</blockquote>
 				</div>
 			</div>
@@ -279,9 +276,9 @@
 						<address>
 						  	<strong>O Local</strong>
 						  	<p>
-						  	<img src="images/digitalks.jpg" alt="Digitalks" width="220px" /><br />
-						  	Rua Luís Coelho, 340 – 9º andar<br />
-						  	Consolação | São Paulo (próximo ao Metrô Consolação/Paulista)
+						  	Rua Luís Coelho, 340 – conjunto 92 - 9º andar<br />
+						  	Consolação | São Paulo (próximo ao Metrô Consolação/Paulista)<br />
+						  	das 19h as 23h
 						  	</p>
 							<iframe width="450" height="200" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com.br/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Rua+Lu%C3%ADs+Coelho,+340,+S%C3%A3o+Paulo&amp;aq=t&amp;sll=-23.682804,-46.595546&amp;sspn=0.733205,1.229095&amp;ie=UTF8&amp;hq=&amp;hnear=R.+Lu%C3%ADs+Coelho,+340+-+Consola%C3%A7%C3%A3o,+S%C3%A3o+Paulo,+01309-000&amp;t=m&amp;ll=-23.555647,-46.660223&amp;spn=0.031471,0.051498&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com.br/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=Rua+Lu%C3%ADs+Coelho,+340,+S%C3%A3o+Paulo&amp;aq=t&amp;sll=-23.682804,-46.595546&amp;sspn=0.733205,1.229095&amp;ie=UTF8&amp;hq=&amp;hnear=R.+Lu%C3%ADs+Coelho,+340+-+Consola%C3%A7%C3%A3o,+S%C3%A3o+Paulo,+01309-000&amp;t=m&amp;ll=-23.555647,-46.660223&amp;spn=0.031471,0.051498&amp;z=14&amp;iwloc=A" style="color:#0000FF;text-align:left">Veja o mapa ampliado</a></small>
 						</address>
