Pequenas atualizações de conteúdo e inserção de propriedades og

--- a/palestra-desenvolvimento-agil.html
+++ b/palestra-desenvolvimento-agil.html
@@ -7,6 +7,12 @@
   <title>Desenvolvimento Ágil | Palestra Gratuita por @romulo_developer</title>
   <meta name="description" content="Palestra sobre Desenvolvimento Ágil gratuita em São Paulo, dia 24 de Maio na Digitalks">
 
+  <meta property="og:title" content="Palestra gratuita sobre Desenvolvimento Ágil na Digitalks por @rômulo_developer"/>
+  <meta property="og:image" content="images/pub/romulo_devel.png" />
+  <meta property="og:site_name" content="@rômulo_developer"/>
+  <meta property="og:url" content="http://romulodeveloper.com.br/palestra-desenvolvimento-agil.html"/>
+  <meta property="og:description" content="Dia 24 de Maio as 19hrs Rômulo Gomes irá apresentar sua palestra sobre Desenvolvimento Ágil na Digitalks, próxima a Estação Consolação do Metrô. O evento será gratuito e serve de base para aqueles que desejam conhecer o que é e como funciona o tão famoso movimento ágil." />
+
   <meta name="viewport" content="width=device-width">
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
@@ -82,7 +88,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span12">
-					<h2>24 de Maio, das 19h as 23h - <strong>Gratuito</strong></h2>
+					<h2>24 de Maio, das 19h as 22h30 - <strong>Gratuito</strong></h2>
 					<br>
 					<h1>Palestra sobre Desenvolvimento Ágil</h1>
 					<br>
@@ -94,8 +100,12 @@
 
 			<div class="row">
 				<div class="span12">
-					<a href="#contato" class="btn btn-info btn-large">
-						<strong>INSCRIÇÕES LIMITADAS</strong><br />clique aqui para garantir sua vaga</a>
+					<a href="#contato" class="btn btn-info btn-large"><strong>INSCRIÇÕES LIMITADAS</strong><br />clique aqui para garantir sua vaga</a>
+					<p>
+						<br>
+						<i>uma parceria</i>
+						<img src="images/digitalks.jpg" alt="Digitalks" width="130px" />
+					</p>
 				</div>
 			</div>
 
@@ -178,7 +188,7 @@
 			<div class="row">
 				<div class="span12">
 					<div class="page-header">
-						<h1><i class="icon-comments-alt"></i> Dúvidas Frequentes <small>porque as coisas podem ficar confusas de vez em quando</small></h1></div>
+						<h1><i class="icon-comments-alt"></i> Dúvidas Frequentes</h1></div>
 				</div>
 			</div>
 			<div class="row questions">	
@@ -233,17 +243,14 @@
 						<li>Foco demais na produção e falta de foco na satisfação do cliente</li>
 						<li>Balanceando rapidez com acertividade e robustez</li>
 						<li>O Manifesto Ágil</li>
-						<li>O que é o desenvolvimento ágil e o que ele traz de excepcional para todos nós?</li>
-						<li>Medir para crescer</li>
 					</ol>
 				</div>
 				<div class="span6">
-					<ol start="9">
+					<ol start="7">
+						<li>Medir para crescer</li>
 						<li>Frameworks ou Metodologias?</li>
 						<li>XP vs Kanban vs Scrum vs Lean (ou um pouco de cada?)</li>
-						<li>Como Funciona na prática</li>
 						<li>Papéis, cerimônias e artefatos</li>
-						<li>Workshop: Gerenciamento de Produto na prática</li>
 						<li>10 motivos para ser Ágil (e convencer seu chefe)</li>
 						<li>Espaço aberto para dúvidas e discussões</li>
 					</ol>
