Incluindo mensagem de fila de espera e atualizando conteúdo do rodapé

--- a/palestra-desenvolvimento-agil.html
+++ b/palestra-desenvolvimento-agil.html
@@ -89,9 +89,9 @@
 			<div class="row">
 				<div class="span12">
 					<h2>24 de Maio, das 19h as 22h30 - <strong>Gratuito</strong></h2>
-					<br>
+					<br />
 					<h1>Palestra sobre Desenvolvimento Ágil</h1>
-					<br>
+					<br />
 					<h2>Rua Luís Coelho, 340 - cj. 92 - Próximo ao metrô Consolação</h2>
 				</div>
 			</div>
@@ -100,7 +100,11 @@
 
 			<div class="row">
 				<div class="span12">
-					<a href="#contato" class="btn btn-info btn-large"><strong>INSCRIÇÕES LIMITADAS</strong><br />clique aqui para garantir sua vaga</a>
+					<div class="alert alert-warning">
+							<strong>Acabou :(</strong><br />
+							Devido a grande procura encerramos as inscrições 12 horas após a divulgação da mesma.<br />Mesmo assim você pode se inscrever e aguardar um lugar na fila de espera ou deixar seu lugar reservado para a próxima palestra.
+					</div>
+					<a href="#contato" class="btn btn-danger btn-large"><strong>INSCRIÇÕES PARA FILA DE ESPERA</strong></a>
 					<p>
 						<br>
 						<i>uma parceria</i>
@@ -263,7 +267,7 @@
 		<div class="container">
 			<div class="row">
 				<div class="span12">
-					<div class="page-header"><h1><i class="icon-signin"></i> Tá esperando o quê pra se inscrever? <small>são só 50 vagas! </small></h1></div>
+					<div class="page-header"><h1><i class="icon-signin"></i> Increva-se na lista de espera <small>aguarde uma vaga ou o próximo evento</small></h1></div>
 				</div>
 			</div>
 			<div id="contact" class="row">
@@ -300,14 +304,14 @@
 			<div class="container">
 				<div class="row">
 					<div class="span3">
-						<h6>Contato:</h6>
+						<h6>Contato</h6>
 						<address>
 							+55 11 98058-4648 (Oi)<br />
 							São Paulo/SP - Brasil
 					    </address>
 					</div>
 					<div class="span3">
-						<h6>Contatos Internéticos</h6>
+						<h6>WEB</h6>
 						<address>
 						  romulogomes.ir (skype)<br />
 						  contato@romulodeveloper.com.br<br />
@@ -315,18 +319,14 @@
 						<address>
 					</div>
 					<div class="span3">
-						<h6>Back-End feito com</h6>
-						<ul>
-							<li>Framework CodeIgniter (PHP)</li>
-							<li>Arquitetura MVC</li>
-							<li>MySQL</li>
-						</ul>
+						<h6>Grupos que organizo</h6>
+						<address>
+							<a href="http://www.meetup.com/r/inbound/0/0/sharetxt/http://www.meetup.com/product-owners-do-brasil/?a=sharetxt">Meetup Product Owners</a><br />
+							<a href="http://www.linkedin.com/groups/Product-Owners-do-Brasil-4919067" target="_ blank">Product Owners do Brasil - LinkedIn</a><br />
+							<a href="http://www.linkedin.com/groups/S%C3%A3o-Paulo-Agile-4845999" target="_ blank">São Paulo Agile - LinkedIn</a>
+						</address>
 					</div>
 					<div class="span3">
-						<h6>Front-End feito com</h6>
-						<a href="http://www.w3.org/html/logo/">
-						  <img src="http://www.w3.org/html/logo/badge/html5-badge-h-css3-device-multimedia-semantics.png" width="200" height="56" alt="HTML5 & CSS3 / Styling, Device Access, Multimedia, and Semantics" title="HTML5 & CSS3 / Styling, Device Access, Multimedia, and Semantics">
-						</a>
 					</div>
 				</div>
 				<div class="divider"></div>
